WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138367
RenderBox shouldn't need a pre-destructor hook.
https://bugs.webkit.org/show_bug.cgi?id=138367
Summary
RenderBox shouldn't need a pre-destructor hook.
Andreas Kling
Reported
2014-11-04 13:04:12 PST
RenderBox::willBeDestroyed() does a couple of things, but none of them require the renderer to be in-tree, nor does it do any virtual dispatch. We should move the logic to the plain destructor and get rid of the hook.
Attachments
Patch
(3.01 KB, patch)
2014-11-04 13:05 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-11-04 13:05:37 PST
Created
attachment 240942
[details]
Patch
WebKit Commit Bot
Comment 2
2014-11-04 14:16:47 PST
Comment on
attachment 240942
[details]
Patch Clearing flags on attachment: 240942 Committed
r175580
: <
http://trac.webkit.org/changeset/175580
>
WebKit Commit Bot
Comment 3
2014-11-04 14:16:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug