RenderBox shouldn't need a pre-destructor hook. <https://webkit.org/b/138367>

Reviewed by Antti Koivisto.

Move teardown logic from willBeDestroyed() to the regular ~RenderBox()
destructor since none of it depends on being in-tree or having a fully
constructed vtable.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::~RenderBox):
(WebCore::RenderBox::willBeDestroyed): Deleted.
* rendering/RenderBox.h:


Canonical link: https://commits.webkit.org/156204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175580 268f45cc-cd09-0410-ab3c-d52691b4dbfc